--- a/app/src/main/res/layout/activity_obj_load.xml
+++ b/app/src/main/res/layout/activity_obj_load.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/activity_obj_load"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:textureview="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.shopify.hackday.ar.ObjLoadActivity"
-    >
-    <TextView
-        android:text="Hello Obj Load"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context="com.shopify.hackday.ar.ObjLoadActivity">
+
+    <org.rajawali3d.view.TextureView
+        android:id="@+id/rajwali_surface"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        textureview:frameRate="60.0"
+        textureview:renderMode="RENDER_WHEN_DIRTY" />
+
+</FrameLayout>
